tabWorkList tabHistory tabMyJobs tabProfile buttons fix